Landing Page Nur Aini Syam

--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
                 <div class="card-body">
                   <h5 class="card-title" align="center">HIMPUNAN MAHASISWA ISLAM</h5>
                   <p class="card-text" align="center">Pembukaan penerimaan kader baru himpunan mahasiswa islam cabang majene komisariat sospol</p>
-                  <a href="#" class="btn btn-primary">more</a>
+                  <a href="#" class="btn btn-primary">More</a>
                 </div>
               </div>
             </div>
@@ -102,8 +102,8 @@
                 <img src="f2.jpg" class="card-img-top" alt="">
                 <div class="card-body">
                   <h5 class="card-title" align="center">PELATIHAN APLIKOM</h5>
-                  <p class="card-text" align="center">Documentasi bersama siswa-siswi Smk Negri Labuang</p>
-                  <a href="#" class="btn btn-primary">more</a>
+                  <p class="card-text" align="center">Pelatihan aplikasi komputer Microsoft word dan Microsoft exel, di Smk Negri Labuang</p>
+                  <a href="#" class="btn btn-primary">More</a>
                 </div>
               </div>
             </div>
@@ -113,7 +113,7 @@
                 <div class="card-body">
                   <h5 class="card-title" align="center">CAMP IMBM KIPK</h5>
                   <p class="card-text" align="center">Documentasi bersama anggota IMBM KIPK di gunung padang-padang</p>
-                  <a href="#" class="btn btn-primary">more</a>
+                  <a href="#" class="btn btn-primary">More</a>
                 </div>
               </div>
             </div>
@@ -131,8 +131,8 @@
                 <img src="f4.jpg" class="card-img-top" alt="">
                 <div class="card-body">
                   <h5 class="card-title" align="center">PERMAJU</h5>
-                  <p class="card-text" align="center">Dokumentasi rapat perdana untuk anggota baru perhimpunan mahasiswa mamuju untuk angkatan 2020</p>
-                  <a href="#" class="btn btn-primary">more</a>
+                  <p class="card-text" align="center">Rapat perdana untuk anggota baru perhimpunan mahasiswa mamuju untuk angkatan 2020</p>
+                  <a href="#" class="btn btn-primary">More</a>
                 </div>
               </div>
             </div>
@@ -142,7 +142,7 @@
                 <div class="card-body">
                   <h5 class="card-title" align="center">KPPM</h5>
                   <p class="card-text" align="center">Komunitas perempuan peduli majene</p>
-                  <a href="#" class="btn btn-primary">more</a>
+                  <a href="#" class="btn btn-primary">More</a>
                 </div>
               </div>
             </div>
@@ -151,8 +151,8 @@
                 <img src="f6.jpg" class="card-img-top" alt="">
                 <div class="card-body">
                   <h5 class="card-title" align="center">PERMAJU</h5>
-                  <p class="card-text" align="center">Documentasi perhimpunan mahasiswa mamuju</p>
-                  <a href="#" class="btn btn-primary">more</a>
+                  <p class="card-text" align="center">Documentasi  kader lama dan kader baru perhimpunan mahasiswa mamuju</p>
+                  <a href="#" class="btn btn-primary">More</a>
                 </div>
               </div>
             </div>
@@ -171,7 +171,7 @@
                 <div class="card-body">
                   <h5 class="card-title" align="center">INFORMATIKA</h5>
                   <p class="card-text" align="center">Documenatasi bersama teman-teman prodi Informatika</p>
-                  <a href="#" class="btn btn-primary">more</a>
+                  <a href="#" class="btn btn-primary">More</a>
                 </div>
               </div>
             </div>
@@ -181,7 +181,7 @@
                 <div class="card-body">
                   <h5 class="card-title" align="center">My Self</h5>
                   <p class="card-text" align="center">......Tidak ada keterangan..........</p>
-                  <a href="#" class="btn btn-primary">more</a>
+                  <a href="#" class="btn btn-primary">More</a>
                 </div>
               </div>
             </div>
@@ -191,7 +191,7 @@
                 <div class="card-body">
                   <h5 class="card-title" align="center">PELATIHAN APLIKOM</h5>
                   <p class="card-text" align="center">.......................................</p>
-                  <a href="#" class="btn btn-primary">more</a>
+                  <a href="#" class="btn btn-primary">More</a>
                 </div>
               </div>
             </div>
